Kotlin project notes